# vaulten_aura

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYRIGHT  ConanPresets.json  README.md  conanfile.py  configure  configure_debug.sh
docs/: architecture.md  docs.h
examples/config/: aura_local_intermediate_cert.pem  aura_local_intermediate_csr.pem  aura_local_intermediate_keypair.pem  aura_local_leaf_cert.pem  aura_local_leaf_csr.pem  aura_local_leaf_keypair.pem  aura_local_root_cert.pem  aura_local_root_csr.pem  aura_local_root_keypair.pem  cert_chain.pem  file1.yaml  server.yml
examples/hello_fn/: function.yml  index.js
include/: align_lib.h  blobber_lib.h  bug_lib.h  compiler_lib.h  daemon_lib.h  encrypt_lib.h  error_lib.h  file_lib.h  function_lib.h  hash_lib.h  ipc_lib.h  list_lib.h  memory_lib.h  privilege_lib.h  radix_lib.h  runtime_lib.h  slab_lib.h  string_lib.h  time_lib.h  types_lib.h  unix_socket_lib.h  utils_lib.h  yaml_lib.h
include/db/: db.h
lib/: blobber_v1_lib.c  daemon_lib.c  encrypt_lib.c  error_lib.c  file_lib.c  hash_lib.c  ipc_lib.c  memory_lib_v1.c  priority_queue_lib.c  privilege_lib.c  radix_v1_lib.c  runtime_lib.c  sanitize_env_lib.c  slab_lib_v1.c  string_lib.c  unix_socket_lib.c  utils_lib.c  yaml_lib.c
lib/db/: db.c
plugins/minio/: conanfile.py
src/cli/: CMakeLists.txt
src/cli/include/: cmdline_cli.h  command_cli.h  flag_cli.h
src/cli/src/: cmdline_cli.c  flag_cli.c  main.c
src/cli/src/commands/: fn_config_validate_cli.c  fn_delete_cli.c  fn_deploy_cli.c  function_cli.c  help_cli.c  root_cli.c  server_cli.c  srv_config_validate_cli.c  srv_start_cli.c  srv_status_cli.c  srv_stop_cli.c  system_cli.c
src/daemon/: CMakeLists.txt
src/daemon/include/: aura_dmn.h  common_dmn.h
src/daemon/include/command/: command_dmn.h  function_dmn.h  server_dmn.h
src/daemon/src/: aura_dmn.c  main.c
src/daemon/src/command/: common_dmn.c  fn_config_validate_dmn.c  fn_deploy_dmn.c  srv_config_validate_dmn.c  svr_start_dmn.c
src/server/: CMakeLists.txt
src/server/exec/examples/: hello.js
src/server/exec/runtime/quickjs/: js_bindings.c  qjs_rt.c
src/server/exec/workers/: worker_man.c
src/server/include/: defaults_srv.h  evt_loop_srv.h  header_srv.h  metrics_srv.h  optimization_srv.h  route_srv.h  server_srv.h  socket_srv.h  token_srv.h  token_table_lib.h
src/server/include/exec/: runtime_srv.h  task_srv.h  worker_srv.h
src/server/include/h2/: connection.h  frame.h  h2_srv.h  hpack_huffman_tb_srv.h  hpack_srv.h  scheduler.h  stream.h
src/server/lib/: metrics_srv.c
src/server/src/: epoll_srv.c  evt_loop_srv.c  header_srv.c  main.c  optimization.c  route_srv.c  socket_srv.c
src/server/src/h2/: connection.c  frame.c  h2_srv.c  hpack_srv.c  scheduler.c  stream.c
src/server/utils/: mkhufftbl.py
tests/: CMakeLists.txt
tests/cli/: basic.c
tests/daemon/: basic.c
tests/db/: basic.c  test_db.c
tests/h2/: Makefile  tls_client.c
tests/include/: test.h
tests/scripts/: tls_client.sh
tests/slab/: basic.c  slab.c
tools/tracing/: tracing_tools.h
zscripts/: generate_cert.sh
